# BioPAIthon

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIB.rst  CONTRIBUTING.rst  IMPROVEMENTS.md  NEWS.rst  README.rst  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  check_version.py  deploy_docs.sh
.github/workflows/: ci.yml  release.yml
Bio/: File.py  Seq.py  SeqFeature.py  SeqRecord.py  __init__.py  cpairwise2module.c
Bio/Align/: __init__.py  _aligncore.c  analysis.py
Bio/PDB/: Atom.py  bcifhelpermodule.c  ccealignmodule.c
Bio/SearchIO/: __init__.py
Bio/SeqIO/: QualityIO.py  SnapGeneIO.py  __init__.py  _index.py
Bio/SeqUtils/: MeltingTemp.py  ProtParam.py  __init__.py
Bio/UniProt/: GOA.py
Doc/: README.rst  conf.py
Doc/Tutorial/: chapter_pairwise.rst
Tests/: run_tests.py  test_AlignIO.py  test_AlignIO_MsfIO.py  test_Align_Alignment.py  test_Align_analysis.py  test_Align_codonalign.py  test_Align_msf.py  test_Entrez.py  test_Entrez_online.py  test_File.py  test_PDB_CEAligner.py  test_PDB_PDBParser.py  test_PDB_SMCRA.py  test_PDB_binary_cif.py  test_PopGen_GenePop_nodepend.py  test_ProtParam.py  test_SearchIO_infernal_text.py  test_SearchIO_model.py  test_SeqFeature.py  test_SeqIO.py  test_SeqIO_QualityIO.py  test_SeqIO_SnapGene.py  test_SeqIO_features.py  test_SeqIO_index.py  test_SeqRecord.py  test_SeqUtils.py  test_SeqUtils_MeltingTemp.py  test_Seq_objs.py  test_UniProt_GOA.py  test_pairwise2.py  test_run_tests.py  test_seq.py
