[build-system]
# >=77 is required for the PEP 639 `license` string and `license-files` list
# below; it also covers the >=74.1 needed for the ext-modules table.
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "biopaithon"
dynamic = ["version"]
description = "Freely available tools for computational molecular biology - a fork of Biopython open to contributors of every kind."
readme = "README.rst"
requires-python = ">=3.10"
license = "LicenseRef-Biopython-License-Agreement"
license-files = ["LICENSE.rst"]
# Authorship stays with the Biopython contributors, who wrote essentially all
# of this code. BioPAIthon is a downstream fork, not a new work.
authors = [
    {name = "The Biopython Contributors", email = "biopython@biopython.org"}
]
maintainers = [
    {name = "The BioPAIthon Contributors"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/dbolser/BioPAIthon/"
Source = "https://github.com/dbolser/BioPAIthon/"
Tracker = "https://github.com/dbolser/BioPAIthon/issues"
"Upstream project" = "https://biopython.org/"
"Upstream documentation" = "https://biopython.org/wiki/Documentation"

[tool.setuptools]
include-package-data = true
zip-safe = false
packages = [
    "Bio",
    "Bio.Affy",
    "Bio.Align",
    "Bio.Align.substitution_matrices",
    "Bio.Align.substitution_matrices.data",
    "Bio.AlignIO",
    "Bio.Alphabet",
    "Bio.Blast",
    "Bio.CAPS",
    "Bio.Cluster",
    "Bio.codonalign",
    "Bio.Compass",
    "Bio.Data",
    "Bio.Emboss",
    "Bio.Entrez",
    "Bio.Entrez.DTDs",
    "Bio.Entrez.XSDs",
    "Bio.ExPASy",
    "Bio.GenBank",
    "Bio.Geo",
    "Bio.Graphics",
    "Bio.Graphics.GenomeDiagram",
    "Bio.HMM",
    "Bio.KEGG",
    "Bio.KEGG.Compound",
    "Bio.KEGG.Enzyme",
    "Bio.KEGG.Gene",
    "Bio.KEGG.Map",
    "Bio.KEGG.KGML",
    "Bio.Medline",
    "Bio.motifs",
    "Bio.motifs.jaspar",
    "Bio.Nexus",
    "Bio.NMR",
    "Bio.Pathway",
    "Bio.Pathway.Rep",
    "Bio.PDB",
    "Bio.PDB.mmtf",
    "Bio.phenotype",
    "Bio.PopGen",
    "Bio.PopGen.GenePop",
    "Bio.Restriction",
    "Bio.SCOP",
    "Bio.SearchIO",
    "Bio.SearchIO._model",
    "Bio.SearchIO.BlastIO",
    "Bio.SearchIO.HHsuiteIO",
    "Bio.SearchIO.HmmerIO",
    "Bio.SearchIO.InfernalIO",
    "Bio.SearchIO.ExonerateIO",
    "Bio.SearchIO.InterproscanIO",
    "Bio.SeqIO",
    "Bio.SeqUtils",
    "Bio.Sequencing",
    "Bio.SVDSuperimposer",
    "Bio.SwissProt",
    "Bio.TogoWS",
    "Bio.Phylo",
    "Bio.Phylo.PAML",
    "Bio.UniGene",
    "Bio.UniProt",
    "BioSQL",
]

[tool.setuptools.dynamic]
version = {attr = "Bio.__version__"}

# C extension modules using setuptools 74.1+ native support
[[tool.setuptools.ext-modules]]
name = "Bio.Align._aligncore"
sources = ["Bio/Align/_aligncore.c"]

[[tool.setuptools.ext-modules]]
name = "Bio.Align._alignmentcounts"
sources = ["Bio/Align/_alignmentcounts.c"]

[[tool.setuptools.ext-modules]]
name = "Bio.Align._codonaligner"
sources = ["Bio/Align/_codonaligner.c"]

[[tool.setuptools.ext-modules]]
name = "Bio.Align._pairwisealigner"
sources = ["Bio/Align/_pairwisealigner.c"]

[[tool.setuptools.ext-modules]]
name = "Bio.Align.substitution_matrices._arraycore"
sources = ["Bio/Align/substitution_matrices/_arraycore.c"]

[[tool.setuptools.ext-modules]]
name = "Bio.cpairwise2"
sources = ["Bio/cpairwise2module.c"]

[[tool.setuptools.ext-modules]]
name = "Bio.Nexus.cnexus"
sources = ["Bio/Nexus/cnexus.c"]

[[tool.setuptools.ext-modules]]
name = "Bio.motifs._pwm"
sources = ["Bio/motifs/_pwm.c"]

[[tool.setuptools.ext-modules]]
name = "Bio.Cluster._cluster"
sources = ["Bio/Cluster/cluster.c", "Bio/Cluster/clustermodule.c"]
extra-compile-args = ["-DCLUSTER_USE_PYTHON_MEMORY"]

[[tool.setuptools.ext-modules]]
name = "Bio.PDB.ccealign"
sources = ["Bio/PDB/ccealignmodule.c"]

[[tool.setuptools.ext-modules]]
name = "Bio.PDB.kdtrees"
sources = ["Bio/PDB/kdtrees.c"]

[[tool.setuptools.ext-modules]]
name = "Bio.PDB._bcif_helper"
sources = ["Bio/PDB/bcifhelpermodule.c"]

[[tool.setuptools.ext-modules]]
name = "Bio.SeqIO._twoBitIO"
sources = ["Bio/SeqIO/_twoBitIO.c"]

# Wheel build settings, shared by .github/workflows/release.yml and any local
# `cibuildwheel` run, so the two cannot drift.
[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
# 32-bit targets are unsupported. PyPy is skipped for now: it is supported via
# the sdist, but the C extensions are not exercised on PyPy in CI yet.
skip = ["*_i686", "*-win32", "pp*"]
build-frontend = "build"
# Import every compiled extension explicitly. A wheel that imports `Bio` but
# silently shipped no C extensions would otherwise pass this check.
test-command = 'python -c "import Bio, Bio.Align._aligncore, Bio.Align._alignmentcounts, Bio.Align._codonaligner, Bio.Align._pairwisealigner, Bio.Align.substitution_matrices._arraycore, Bio.cpairwise2, Bio.Nexus.cnexus, Bio.motifs._pwm, Bio.Cluster._cluster, Bio.PDB.ccealign, Bio.PDB.kdtrees, Bio.PDB._bcif_helper, Bio.SeqIO._twoBitIO; print(Bio.__version__)"'

[dependency-groups]
dev = [
    "setuptools>=77",
]
